--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,17 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
+    //material desgin
+    implementation "com.google.android.material:material:$material_version"
+
+    //navigation graph
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
