[FEAT] Playlist, Record Dto, Dao 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi-adapters:$moshi_version"
 
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
