--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         room_version = "2.4.2"
         moshi_version = "1.13.0"
         material_version = "1.5.0"
+        flexbox_version = "3.0.0"
         nav_version = "2.4.0"
         fragment_version = "1.5.0"
         glide_version = "4.13.2"
