--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         glide_version = "4.13.2"
         logging_intercepter ="4.10.0"
         coroutine_version = "1.6.0"
+        shimmer_version = "0.5.0"
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
