[FIX] github ci 시 local properties로 fail 되는 문제 수정

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,6 +20,11 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Decode BASE_URL
+      env:
+        BASEURL: ${{ secrets.BASE_URL }}
+      run: echo BASE_URL=\"$BASEURL\" > ./local.properties
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
