[FEAT] Search API 연동 (#17)
* [FEAT] BaseURL 설정 및 Repository 정의

* [FEAT] BaseViewModel 에러 처리 정의

* [FEAT] 검색 시, 필요 데이터 추가 정의

* [FEAT] 태그 클릭을 이용한 검색 및 일반 검색 기능 추가

* [FEAT] 검색 로딩 화면 추가

* [FIX] PR 반영

* [FIX] github ci 시 local properties로 fail 되는 문제 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
+Properties properties = new Properties()
+properties.load(new FileInputStream(rootProject.file("local.properties")))
+
 android {
     compileSdk 31
 
@@ -14,6 +17,8 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+
+        buildConfigField("String", "BASE_URL", properties['BASE_URL'])
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -75,6 +80,9 @@ dependencies {
     //coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+
+    //shimmer
+    implementation "com.facebook.shimmer:shimmer:$shimmer_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
